syntax = "proto3";

package demo;

option go_package = "github.com/yumaeda/grpc/demo-grpc/check_prime";

service CheckPrime {
  rpc IsPrime(IsPrimeRequest) returns (IsPrimeResponse){}
}

message IsPrimeRequest {
  int64 number = 1;
}

message IsPrimeResponse {
  string result = 1;
}
